force-app/main/default/objects/LLC_BI__Product_Connection__c/LLC_BI__Product_Connection__c.object-meta.xml
<CustomObject>
    <label>Product Connection</label>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Product Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>