force-app/main/default/objects/LLC_BI__Product_Connection__c/fields/LLC_BI__Use_In_Branch__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Use_In_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators select this optional boolean field to display recommended products in the In-Branch workflow. By default, it is false.</description>
    <inlineHelpText>Select this checkbox to display recommended products in the In-Branch workflow.</inlineHelpText>
    <label>Use In-Branch</label>
    <type>Checkbox</type>
</CustomField>