force-app/main/default/objects/LLC_BI__Product_Connection__c/fields/nPortal__Is_Portal_Default_Selected__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Is_Portal_Default_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if, for this product, this ancillary service should be selected by default. If this checkbox is selected, the user filling out the online application in Customer Portal sees that this ancillary service has been automatically selected.</description>
    <label>Is Portal Default Selected</label>
    <type>Checkbox</type>
</CustomField>