force-app/main/default/objects/LLC_BI__Product_Connection__c/fields/nPortal__Is_Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Is_Portal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to enable this ancillary service for this product in Customer Portal. If selected, the ancillary service is offered as an option to a Customer Portal user who is filling out an online application for this product.</description>
    <label>Is Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>